v<0.1.0>, <May.12.2013> -- Initial release.
v<0.1.1>, <May.12.2013> -- Bugfix - don't return values unless using --no-output