@@ -9,7 +9,7 @@ envlist = py27, py32, py33
 [testenv]
 commands = {envpython} setup.py test
 deps =
-    blessings>=1.5,<1.6
+    blessings==1.5
 
 [testenv:py27]
 basepython={homedir}/.pythonbrew/pythons/Python-2.7.3/bin/python
