@@ -1,2 +1,3 @@
 v<0.1.0>, <May.12.2013> -- Initial release.
 v<0.1.1>, <May.12.2013> -- Bugfix - don't return values unless using --no-output
+v<0.1.2>, <May.22.2013> -- Scoring is done by percentage of possible points now; Windows terminal bugfix
